[gd_scene load_steps=3 format=3 uid="uid://beypr510eoqml"]

[ext_resource type="Script" uid="uid://2dnwg3gkbaeg" path="res://source/client/ui/menus/player_profile/player_profile.gd" id="1_fnhhi"]
[ext_resource type="SpriteFrames" uid="uid://bqcsne8jhbmi8" path="res://source/common/gameplay/characters/sprite_frames/knight.tres" id="2_21o1w"]

[node name="PlayerProfile" type="Control" node_paths=PackedStringArray("name_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fnhhi")
name_label = NodePath("PanelContainer/HBoxContainer/VBoxContainer2/Label")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = 25.0
offset_right = -38.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "money: 0
character_class: knight
level: 0"
horizontal_alignment = 3
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "hori"

[node name="Control" type="CenterContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/HBoxContainer/VBoxContainer2/Control"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PanelContainer/HBoxContainer/VBoxContainer2/Control/Control"]
scale = Vector2(4, 4)
sprite_frames = ExtResource("2_21o1w")
animation = &"death"

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Hello I'am new!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
alignment = 1

[node name="MessageButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Message"

[node name="FriendButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Add friend"

[node name="InviteButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Invite in guild"

[node name="Close" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Close"

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
